# Plex-filename-parser

./: .gitignore  CHANGELOG.md  README.md  movie-name-parser.py  movie_name_parser.py  parser.py  pyproject.toml  setup.cfg  test_movie_name_parser.py  test_tv_show_name_parser.py  tox.ini  tv-show-name-parser.py  tv_show_name_parser.py
.github/workflows/: codeql.yml  tests.yml
src/plex/: movie_name_parser.py  tv_show_name_parser.py  util.py
tests/: test_movie_name_parser.py  test_tv_show_name_parser.py
